# RabbitMQ-Federation

./: .gitignore  pyproject.toml  requirements.txt
Downstream/: main.py  settings.sh
Downstream/docker/: docker-compose.yml
Upstream/: main.py  settings.sh
Upstream/docker/: docker-compose.yml
